test/chainsaw/authpolicy/wellknownuri_validation/authpolicy-invalid.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: invalid-well-known-uri
spec:
  enabled: true
  allowedAudiences:
    - value: entraid_server
  wellKnownURI: https:///path
  selector:
    matchLabels:
      app: application
